resources/policy/bundles/psp-v2022/psp-apparmor.yaml
# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAppArmor
metadata:
  name: psp-v2022-psp-apparmor
  labels:
    policy.plural.sh/bundleName: psp-v2022
  annotations:
    policycontroller.gke.io/bundleVersion: "202312.0"
    policy.plural.sh/constraintData: |-
      "{
        bundleName: 'psp-v2022',
        bundleDisplayName: 'Pod Security Policies v2022',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-constraints-to-enforce-pod-security',
        bundleVersion: '202312.0',
        bundleDescription: 'Use the Pod Security Policies (PSP) v2022 policy bundle with Policy Controller to implement the Kubernetes Pod Security Policies.',
        controlNumbers: '[]',
        severity: 'UNSPECIFIED',
        description: 'Configures an allow-list of AppArmor profiles for use by containers. This corresponds to specific annotations applied to a PodSecurityPolicy.',
        remediation: 'Pods must use an AppArmor profile listed in the `allowedProfiles` field. Use a different type or customize the field. See "AppArmor" for more information: https://kubernetes.io/docs/tutorials/clusters/apparmor/',
        minimumTemplateLibraryVersion: '1.11.1',
        constraintHash: '8014262f0f5a5b70bd8b8c3c4ccb698d00af495a429ad8952b542d65a853e4c5'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod
  # K8sPSPAppArmor documentation and parameters:
  # https://cloud.google.com/anthos-config-management/docs/latest/reference/constraint-template-library#k8spspapparmor
  parameters:
    allowedProfiles:
      - runtime/default
