resources/policy/bundles/psp-v2022/psp-forbidden-sysctls.yaml
# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPForbiddenSysctls
metadata:
  name: psp-v2022-psp-forbidden-sysctls
  labels:
    policy.plural.sh/bundleName: psp-v2022
  annotations:
    policy.plural.sh/constraintData: |-
      "{
        bundleName: 'psp-v2022',
        bundleDisplayName: 'Pod Security Policies v2022',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-constraints-to-enforce-pod-security',
        bundleVersion: '202312.0',
        bundleDescription: 'Use the Pod Security Policies (PSP) v2022 policy bundle with Policy Controller to implement the Kubernetes Pod Security Policies.',
        controlNumbers: '[]',
        severity: 'UNSPECIFIED',
        description: 'Controls the `sysctl` profile used by containers. Corresponds to the `forbiddenSysctls` field in a PodSecurityPolicy.',
        remediation: 'Containers can only set sysctls listed in the `allowedSysctls` field. Drop the listed `sysctl` or customize the field.',
        minimumTemplateLibraryVersion: '1.10.1',
        constraintHash: '5b25e5b6152310a8b4f00303f02b69b9bdd63fff8797d976609c10680e9ffaa9'
      }"
    policycontroller.gke.io/bundleVersion: "202312.0"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod
  # K8sPSPForbiddenSysctls documentation and parameters:
  # https://cloud.google.com/anthos-config-management/docs/latest/reference/constraint-template-library#k8spspforbiddensysctls
  parameters:
    forbiddenSysctls: []
    # - "*" # * may be used to forbid all sysctls
    # - kernel.*
