resources/policy/bundles/psp-v2022/psp-host-filesystem.yaml
# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostFilesystem
metadata:
  name: psp-v2022-psp-host-filesystem
  labels:
    policy.plural.sh/bundleName: psp-v2022
  annotations:
    policy.plural.sh/constraintData: |-
      "{
        bundleName: 'psp-v2022',
        bundleDisplayName: 'Pod Security Policies v2022',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-constraints-to-enforce-pod-security',
        bundleVersion: '202312.0',
        bundleDescription: 'Use the Pod Security Policies (PSP) v2022 policy bundle with Policy Controller to implement the Kubernetes Pod Security Policies.',
        controlNumbers: '[]',
        severity: 'UNSPECIFIED',
        description: 'Controls usage of the host filesystem. Corresponds to the `allowedHostPaths` field in a PodSecurityPolicy.',
        remediation: 'You can use only Pod host filesystems listed in the `allowedHostPaths` field. Use a different host filesystem or customize the field.',
        minimumTemplateLibraryVersion: '1.10.1',
        constraintHash: '7c61178fdb7fbae28cb2e0af1165dd0884035ca2a8effa2fca5751bc25e07e1f'
      }"
    policycontroller.gke.io/bundleVersion: "202312.0"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod
    excludedNamespaces:
      - kube-system
  # K8sPSPHostFilesystem documentation and parameters:
  # https://cloud.google.com/anthos-config-management/docs/latest/reference/constraint-template-library#k8spsphostfilesystem
  parameters:
    allowedHostPaths:
      - pathPrefix: / # Remove to enable allowedHostPaths
        # readOnly: true
