resources/policy/bundles/psp-v2022/psp-pods-allowed-user-ranges.yaml
# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowedUsers
metadata:
  name: psp-v2022-psp-pods-allowed-user-ranges
  labels:
    policy.plural.sh/bundleName: psp-v2022
  annotations:
    policy.plural.sh/constraintData: |-
      "{
        bundleName: 'psp-v2022',
        bundleDisplayName: 'Pod Security Policies v2022',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-constraints-to-enforce-pod-security',
        bundleVersion: '202312.0',
        bundleDescription: 'Use the Pod Security Policies (PSP) v2022 policy bundle with Policy Controller to implement the Kubernetes Pod Security Policies.',
        controlNumbers: '[]',
        severity: 'UNSPECIFIED',
        description: 'Controls the user and group IDs of the container and some volumes. Corresponds to the `runAsUser`, `runAsGroup`, `supplementalGroups`, and `fsGroup` fields in a PodSecurityPolicy.',
        remediation: 'The user and group IDs of the container and some volumes are restricted to those listed in the `runAsUser`, `runAsGroup`, `supplementalGroups`, and `fsGroup` fields. Use allowed user and group IDs or customize the fields.',
        minimumTemplateLibraryVersion: '1.10.1',
        constraintHash: '9b7b9b7048dc6d87b60dbf37b33af752e964158fc4ee31561e1114f89616d859'
      }"
    policycontroller.gke.io/bundleVersion: "202312.0"
spec:
  enforcementAction: dryrun
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Pod
    excludedNamespaces:
    - kube-system
    - asm-system
    - config-management-system
    - config-management-monitoring
    - cert-manager
    - gke-connect
    - istio-system
    - resource-group-system
    - gatekeeper-system
  # K8sPSPAllowedUsers documentation and parameters:
  # https://cloud.google.com/anthos-config-management/docs/latest/reference/constraint-template-library#k8spspallowedusers
  parameters:
    exemptImages:
    - gcr.io/gke-release/asm/proxyv2:*
    - gcr.io/anthos-baremetal-release/*
    - gke.gcr.io/*
    runAsUser:
      rule: RunAsAny # MustRunAs # MustRunAsNonRoot
      # ranges:
      # - min: 100
      #   max: 200
    runAsGroup:
      rule: RunAsAny # MustRunAs # MayRunAs
      # ranges:
      # - min: 100
      #   max: 200
    supplementalGroups:
      rule: RunAsAny # MustRunAs # MayRunAs
      # ranges:
      # - min: 100
      #   max: 200
    fsGroup:
      rule: RunAsAny # MustRunAs # MayRunAs
      # ranges:
      # - min: 100
      #   max: 200
