resources/policy/bundles/psp-v2022/psp-readonlyrootfilesystem.yaml
# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPReadOnlyRootFilesystem
metadata:
  name: psp-v2022-psp-readonlyrootfilesystem
  labels:
    policy.plural.sh/bundleName: psp-v2022
  annotations:
    policy.plural.sh/constraintData: |-
      "{
        bundleName: 'psp-v2022',
        bundleDisplayName: 'Pod Security Policies v2022',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-constraints-to-enforce-pod-security',
        bundleVersion: '202312.0',
        bundleDescription: 'Use the Pod Security Policies (PSP) v2022 policy bundle with Policy Controller to implement the Kubernetes Pod Security Policies.',
        controlNumbers: '[]',
        severity: 'UNSPECIFIED',
        description: 'Requires the use of a read-only root file system by pod containers. Corresponds to the `readOnlyRootFilesystem` field in a PodSecurityPolicy.',
        remediation: 'Pods must use a read-only root file system.',
        minimumTemplateLibraryVersion: '1.10.1',
        constraintHash: 'c2f48bb88be7e81a6032849d6a5d55add0757025f0f62d38456030b8440e8380'
      }"
    policycontroller.gke.io/bundleVersion: "202312.0"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod
    excludedNamespaces:
      - config-management-system
      - kube-system
      - gke-connect
      - asm-system
  # K8sPSPReadOnlyRootFilesystem documentation and parameters:
  # https://cloud.google.com/anthos-config-management/docs/latest/reference/constraint-template-library#k8spspreadonlyrootfilesystem
  parameters:
    exemptImages:
      - gcr.io/anthos-baremetal-release/*
      - gke.gcr.io/*
      - '*' # Remove to set readOnlyRootFilesystem
