resources/policy/bundles/psp-v2022/psp-volume-types.yaml
# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPVolumeTypes
metadata:
  name: psp-v2022-psp-volume-types
  labels:
    policy.plural.sh/bundleName: psp-v2022
  annotations:
    policy.plural.sh/constraintData: |-
      "{
        bundleName: 'psp-v2022',
        bundleDisplayName: 'Pod Security Policies v2022',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-constraints-to-enforce-pod-security',
        bundleVersion: '202312.0',
        bundleDescription: 'Use the Pod Security Policies (PSP) v2022 policy bundle with Policy Controller to implement the Kubernetes Pod Security Policies.',
        controlNumbers: '[]',
        severity: 'UNSPECIFIED',
        description: 'Restricts mountable volume types to those specified by the user. Corresponds to the `volumes` field in a PodSecurityPolicy.',
        remediation: 'Cannot use mountable volume types unless listed in the `volumes` field. See \"Volumes\" for more information: https://kubernetes.io/docs/concepts/storage/volumes/',
        minimumTemplateLibraryVersion: '1.10.1',
        constraintHash: 'da03e86fdac54d6e421186ecb3fbaafd95206c751745bfe637539f8b7ebc9bd4'
      }"
    policycontroller.gke.io/bundleVersion: "202312.0"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod
    excludedNamespaces:
      - kube-system
      - gke-system
  # K8sPSPVolumeTypes documentation and parameters:
  # https://cloud.google.com/anthos-config-management/docs/latest/reference/constraint-template-library#k8spspvolumetypes
  parameters:
    volumes:
      - configMap
      - emptyDir
      - projected
      - secret
      - downwardAPI
      - csi
      - persistentVolumeClaim
      - ephemeral
      - awsElasticBlockStore
      - azureDisk
      - azureFile
      - cephFS
      - cinder
      - fc
      - flexVolume
      - flocker
      - gcePersistentDisk
      - gitRepo
      - glusterfs
      - iscsi
      - nfs
      - photonPersistentDisk
      - portworxVolume
      - quobyte
      - rbd
      - scaleIO
      - storageos
      - vsphereVolume
